fix banner overlay on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -566,11 +566,11 @@ span {
 }
 
 .home-header-grid img {
-  margin-top: 160px;
+  margin-top: 220px;
 }
 
 .home-header-grid h1 {
-  margin: 80px 0;
+  margin: 50px 0;
 }
 
 .header-text {
@@ -1386,17 +1386,13 @@ h5 {
   }
 
   .home-header-grid img {
-    margin-top: 100px;
+    margin-top: 125px;
     height: 230px;
   }
 
   .home-header-grid h1 {
     margin: 50px 0;
     font-size: 25px;
-  }
-
-  .banner-overlay {
-    padding-bottom: 115px;
   }
 
   .appt-thumbnail img {
